Carry javac's --add-exports per source set, from every route into the parse
Nothing recorded --add-exports: the compile-log route did not know the option (flag and value were both
ignored), the model had no field for it, and neither build plugin read it. A module that compiles against
javac's internals therefore lost them in the parse. Measured on maddi itself, parsed as part of the
jfocus/maddi workspace: maddi-java-openjdk is built with five --add-exports jdk.compiler/com.sun.tools.javac.*,
and 8 of its 17 compilation units were dropped on "Type 'Types' not found".

SourceSet.addExports() joins addModules() and is threaded the same way: SourceSetImpl and its copy builder,
the JSON format (omitted when empty, absent in older files reads as empty), Javac (a valued, repeatable option
in both spellings), CompileInvocation, CompileListToSourceSets, PluginSourceSets.addExportsFrom, the gradle
plugin's own and sibling facts (SourceFacts), and the maven plugin.

The parse applies a set's exports on its own javac task. Two javac rules shape it: --add-exports of a SYSTEM
module is refused under --release, so such a set is parsed against the running JDK's modules, as its build
was; and a task that compiles into the unnamed module is reached only through ALL-UNNAMED, so the target is
the compilation's, not the build's. The shared-JDK preload task and the global jdkInternals mode are left
as they were.

TestPerSourceSetAddExports resolves com.sun.tools.javac.code.Types with the export and, as its control, drops
the unit without it; TestJavacGradleLine, TestStreaming and TestPluginSourceSets cover the other layers.
maddi-run-config, maddi-run-openjdk, maddi-inspection-openjdk and both plugins: 265 tests, 0 failures.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01LGXteCNrKFAz9VJSUruKSa